<resources>
    <string name="app_name">OneStop</string>
    <string name="splash_screen">Splash Screen Image</string>
    <string name="by_dhruv_nargund">By Dhruv Nargund</string>
    <string name="search">Search…</string>
    <string name="these_are_the_locations_that_you_ve_viewed_recently">These are the locations people showed most the interest in !</string>
    <string name="all_activities_in_melbourne">ALL ACTIVITIES IN MELBOURNE -></string>
    <string name="app_title">App Title</string>
    <string name="this_is_a_sample_description_for_the_location_that_is_going_to_be_featured_here_to_check_how_much_text_we_can_actually_fit_it_is_a_placeholder">This is a sample description for the location that is going to be featured here to check how much text we can actually fit. it is a placeholder</string>
    <string name="most_nviewed_nlocations">MOST\nVIEWED\nLOCATIONS</string>
    <string name="museums_and_art_galleries">MUSEUMS AND ART GALLERIES-></string>
    <string name="parks_gardens">PARKS AND GARDENS-></string>
    <string name="melbourne_travel_tips">MELBOURNE TRAVEL TIPS-></string>
    <string name="register">Register</string>
    <string name="already_signed_up_please_login">Already Signed up! Please login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="register_here">Register here!</string>
    <string name="artvo_immersive_art_gallery">ArtVo Immersive Art Gallery</string>
    <string name="artvo_is_an_art_gallery_with_a_difference_this_immersive_art_space_encourages_people_to_touch_play_and_interact_with_the_art_and_there_are_11_themed_zones_to_explore_save_time_searching_for_cool_photo_opportunities_in_melbourne_and_benefit_from_a_place_that_has_lots_of_great_backdrops_including_angel_wings_the_canals_of_venice_and_the_taj_mahal">ArtVo is an art gallery with a difference—this immersive art space encourages people to touch, play, and interact with the art, and there are 11 themed zones to explore. Save time searching for cool photo opportunities in Melbourne, and benefit from a place that has lots of great backdrops, including angel wings, the canals of Venice, and the Taj Mahal.</string>
    <string name="australian_center_for_the_moving_image">Australian Center for the Moving Image</string>
    <string name="the_australian_centre_for_the_moving_image_acmi_at_federation_square_melbourne_is_australia_s_national_museum_of_film_video_games_digital_culture_and_art_acmi_started_life_as_the_state_film_centre_of_victoria_in_1946_during_the_2015_16_financial_year_1_45_million_people_visited_acmi_the_second_highest_attendance_of_any_gallery_or_museum_in_australia_and_the_most_visited_moving_image_museum_in_the_world_in_may_2019_acmi_closed_to_the_public_to_begin_a_40_million_redevelopment_on_1_january_2002_the_australian_centre_for_the_moving_image_was_officially_established_by_the_film_act_2001_victoria_the_first_stage_was_opened_in_october_with_two_exhibitions_deep_space_sensation_and_immersion_and_ngarinyin_pathways_dulwan_running_in_acmi_s_screen_gallery_a_few_weeks_later_acmi_cinemas_officially_opened">The Australian Centre for the Moving Image (ACMI), at Federation Square, Melbourne, is Australia\'s national museum of film, video games, digital culture and art. ACMI started life as the State Film Centre of Victoria in 1946. During the 2015–16 financial year, 1.45 million people visited ACMI, the second-highest attendance of any gallery or museum in Australia, and the most visited moving image museum in the world.In May 2019, ACMI closed to the public to begin a $40 million redevelopment. On 1 January 2002, the Australian Centre for the Moving Image was officially established by the Film Act 2001 (Victoria). The first stage was opened in October, with two exhibitions, Deep Space: Sensation and Immersion and Ngarinyin Pathways Dulwan, running in ACMI\'s Screen Gallery. A few weeks later, ACMI Cinemas officially opened.</string>
    <string name="the_ian_potter_center_ngv">The Ian Potter Center NGV</string>
    <string name="the_ian_potter_centre_ngv_australia_is_an_art_gallery_that_houses_the_australian_part_of_the_art_collection_of_the_national_gallery_of_victoria_ngv_the_ian_potter_centre_ngv_australia_is_located_at_federation_square_in_melbourne_victoria_while_the_gallery_s_international_works_are_displayed_at_the_ngv_international_on_st_kilda_road_there_are_over_20_000_australian_artworks_including_paintings_sculpture_prints_photography_fashion_and_textiles_and_the_collection_is_one_of_the_oldest_and_most_well_known_in_the_country_the_ian_potter_centre_is_a_legacy_of_the_businessman_and_philanthropist_sir_ian_potter_well_known_works_at_the_ian_potter_centre_include_frederick_mccubbin_s_the_pioneer_1904_and_tom_roberts_shearing_the_rams_1890_also_featured_are_works_from_sidney_nolan_arthur_boyd_albert_tucker_arthur_streeton_john_perceval_margaret_preston_bill_henson_howard_arkley_and_fred_williams">The Ian Potter Centre: NGV Australia is an art gallery that houses the Australian part of the art collection of the National Gallery of Victoria (NGV). The Ian Potter Centre: NGV Australia is located at Federation Square in Melbourne, Victoria; while the gallery\'s international works are displayed at the NGV International on St Kilda Road. There are over 20,000 Australian artworks, including paintings, sculpture, prints, photography, fashion and textiles, and the collection is one of the oldest and most well known in the country. The Ian Potter Centre is a legacy of the businessman and philanthropist Sir Ian Potter. Well-known works at the Ian Potter Centre include Frederick McCubbin\'s The pioneer (1904) and Tom Roberts\' Shearing the Rams (1890). Also featured are works from Sidney Nolan, Arthur Boyd, Albert Tucker, Arthur Streeton, John Perceval, Margaret Preston, Bill Henson, Howard Arkley and Fred Williams.</string>
    <string name="melbourne_museum">Melbourne Museum</string>
    <string name="melbourne_museum_is_a_natural_and_cultural_history_museum_located_in_the_carlton_gardens_in_melbourne_australia_located_adjacent_to_the_royal_exhibition_building_it_is_the_largest_museum_in_the_southern_hemisphere_the_museum_was_opened_in_2000_as_a_project_of_the_government_of_victoria_on_behalf_of_museums_victoria_who_administrates_the_venue_melbourne_museum_is_a_rich_response_to_melbourne_s_urban_condition_and_provides_a_place_for_education_history_culture_and_society_to_engage_with_each_other_in_a_contemporary_setting_it_is_now_an_important_part_of_melbourne_s_soft_infrastructure_and_is_consistently_ranked_as_one_of_the_most_popular_museums_and_tourist_attractions_in_australia_winning_best_tourist_attraction_at_the_australian_tourism_awards_in_2011">Melbourne Museum is a natural and cultural history museum located in the Carlton Gardens in Melbourne, Australia. Located adjacent to the Royal Exhibition Building, it is the largest museum in the Southern Hemisphere. The museum was opened in 2000 as a project of the Government of Victoria, on behalf of Museums Victoria who administrates the venue. Melbourne museum is a rich response to Melbourne\'s urban condition, and provides a place for education, history, culture and society to engage with each other in a contemporary setting. It is now an important part of Melbourne\'s soft infrastructure and is consistently ranked as one of the most popular museums and tourist attractions in Australia, winning \'Best Tourist Attraction\' at the Australian Tourism Awards in 2011.</string>
    <string name="national_gallery_of_victoria">National Gallery Of Victoria</string>
    <string name="the_national_gallery_of_victoria_is_an_art_gallery_and_museum_in_melbourne_australia_started_in_1861_it_is_the_oldest_and_the_largest_public_art_gallery_in_australia_the_main_gallery_is_located_in_st_kilda_road_at_southbank_with_a_branch_gallery_at_federation_square_the_st_kilda_road_gallery_designed_by_sir_roy_grounds_opened_in_1968_since_december_2003_ngv_has_operated_across_two_sites_ngv_international_on_st_kilda_road_redesigned_by_mario_bellini_and_the_ian_potter_centre_ngv_australia_at_federation_square_designed_by_lab_architecture_studio_when_the_gallery_opened_victoria_had_been_an_independent_colony_for_ten_years_after_the_victorian_gold_rush_it_was_easily_the_richest_part_of_australia_and_melbourne_the_largest_city_generous_gifts_from_rich_citizens_including_the_industrialist_alfred_felton_made_it_possible_for_the_national_gallery_to_start_buying_large_collections_of_overseas_works_from_both_old_and_modern_masters_it_has_over_65_000_works_of_art">The National Gallery of Victoria is an art gallery and museum in Melbourne, Australia. Started in 1861, it is the oldest and the largest public art gallery in Australia. The main gallery is located in St Kilda Road, at Southbank, with a branch gallery at Federation Square. The St Kilda Road Gallery, designed by Sir Roy Grounds, opened in 1968. Since December 2003, NGV has operated across two sites – NGV International on St Kilda Road, redesigned by Mario Bellini, and The Ian Potter Centre: NGV Australia at Federation Square, designed by LAB Architecture Studio. When the gallery opened, Victoria had been an independent colony for ten years. After the Victorian gold rush, it was easily the richest part of Australia, and Melbourne the largest city. Generous gifts from rich citizens, including the industrialist Alfred Felton, made it possible for the National Gallery to start buying large collections of overseas works from both old and modern masters. It has over 65,000 works of art.</string>
    <string name="national_sports_museum">National Sports Museum</string>
    <string name="luna_park">Luna Park</string>
    <string name="luna_park_melbourne_is_a_historic_amusement_park_located_on_the_foreshore_of_port_phillip_bay_in_st_kilda_melbourne_victoria_it_opened_on_13_december_1912_with_a_formal_opening_a_week_later_and_has_been_operating_almost_continuously_ever_since_luna_park_was_built_by_american_showmen_j_d_williams_2_together_with_the_phillips_brothers_harold_leon_and_herman_not_much_is_known_of_their_background_but_they_were_involved_in_the_building_of_picture_theatres_in_spokane_washington_and_vancouver_before_coming_to_sydney_in_1909_and_quickly_establishing_a_chain_of_luxury_cinemas_in_that_city_and_then_melbourne">Luna Park Melbourne is a historic amusement park located on the foreshore of Port Phillip Bay in St Kilda, Melbourne, Victoria. It opened on 13 December 1912, with a formal opening a week later, and has been operating almost continuously ever since. Luna Park was built by American showmen J D Williams,[2] together with the Phillips brothers Harold, Leon and Herman. Not much is known of their background, but they were involved in the building of picture theatres in Spokane, Washington and Vancouver before coming to Sydney in 1909 and quickly establishing a chain of luxury cinemas in that city and then Melbourne.</string>
    <string name="directions">Directions</string>
    <string name="login">Login</string>
</resources>