<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_icon"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:src="@drawable/onestop_icon"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/relative_layout_login_button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/login_icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:scaleType="fitXY"
                android:src="@drawable/onestop_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/login_icon"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/image_view_icon"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            android:elevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/search"
                android:textSize="17sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/search_icon"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/restaurant_icon"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/hotel_icon"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="18dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/university_icon"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentPrimary">

                <LinearLayout
                    android:id="@+id/linear_layout_text_recent"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:background="#4B06A4FF"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/most_nviewed_nlocations"
                        android:textColor="@color/black"
                        app:autoSizeMaxTextSize="100sp"
                        app:autoSizeMinTextSize="20dp"
                        app:autoSizeStepGranularity="2sp"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/these_are_the_locations_that_you_ve_viewed_recently"
                        android:textColor="@color/black"
                        app:autoSizeMaxTextSize="15sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeStepGranularity="2sp"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_most_viewed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/linear_layout_text_recent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/most_card_design" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/text_view_all_activities"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    android:text="@string/all_activities_in_melbourne"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_all_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_all_activities"
                    android:layout_centerVertical="true"
                    android:minHeight="160dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/all_activities_card_design" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/text_view_museums"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    android:text="@string/museums_and_art_galleries"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_museums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_museums"
                    android:minHeight="160dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/all_activities_card_design" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/text_view_parks"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    android:text="@string/parks_gardens"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_parks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_parks"
                    android:layout_centerVertical="true"
                    android:minHeight="160dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/all_activities_card_design" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/text_view_tips"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    android:text="@string/melbourne_travel_tips"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_tips"
                    android:minHeight="160dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>